# ntcall-rs

./: Cargo.toml  LICENSE  README.md  build.rs
resources/: syscall_ids
src/: lib.rs
